--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=courseSpringNelioAlves
 server.port=${port:8081}
+
+spring.profiles.active=test
+spring.jpa.open-in-view=true
